// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders correctly 1`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "display": "inline-flex",
      "position": "relative",
    }
  }
>
  <input
    className="sc-bwzfXH iyBxrD"
    type="button"
    value="Primary"
  />
</div>
`;

exports[`Button Secondary Renders correctly 1`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "display": "inline-flex",
      "position": "relative",
    }
  }
>
  <input
    className="sc-htpNat lluWzr"
    type="button"
    value="Secondary"
  />
</div>
`;
